[package]
name = "noti"
version = "0.0.1-alpha.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
uuid = { version = "1.0.0-alpha.1", features = ["serde", "v4"] }
mockall = "0.10"
chrono = { version = "0.4", features = ["serde"] }
handlebars = "4.1"
anyhow = "1.0"
mrml = { version = "1.2", features = ["orderedmap"] }
lazy_static = "1.4"
lettre = { version = "0.10.0-rc.4", features = ["serde", "tokio1", "tokio1-native-tls"] }
async-trait = "0.1"
tokio = { version = "1.13", features = ["full"] }

twilio-async = { version = "0.5.0", optional = true }

[features]
default = ["twilio"]
twilio = ["twilio-async"]


[dev-dependencies]
pretty_assertions = "0.4"
indoc = { version = "1.0" }

