[package]
name = "notifier"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
uuid = { version = "1.0.0-alpha.1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
handlebars = "4.2"
anyhow = "1.0"
async-trait = "0.1"
lock_api = "0.4"
fastrand = "1.6"
mrml = { version = "1.2", features = ["parse", "render", "orderedmap"], default-features = false }
liquid = "0.23"
static_assertions = "1.1"
erased-serde = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
