[package]
name = "notify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
mockall = "0.10"
chrono = { version = "0.4", features = ["serde"] }
flume = "0.10"
handlebars = "4.1"
anyhow = "1.0"
mrml = { version = "1.2", features = ["orderedmap"] }
lazy_static = "1.4"
notify-macros = { path = "../notify-macros" }
lettre = { version = "0.10.0-rc.4", features = ["serde", "tokio1", "tokio1-native-tls"] }
async-trait = "0.1"
tokio = { version = "1.13", features = ["full"] }

[dev-dependencies]
pretty_assertions = "0.4"
indoc = { version = "1.0" }

